istio/1/test-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-test
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: istio-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo
        args:
          - "-text=Hello from Istio"
        ports:
          - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: istio-test
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: echo
