istio/1/gateway-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: echo-gateway
  namespace: istio-test
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echo-vs
  namespace: istio-test
spec:
  hosts:
  - "*"
  gateways:
  - echo-gateway
  http:
  - route:
    - destination:
        host: echo.istio-test.svc.cluster.local
        port:
          number: 80
